ping-pong/manifests/network.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ing
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 80
